[package]
name = "fuzzerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
loggerk = { version="0.1.0", path="../loggerk" }
argsclsk = { version="0.1.0", path="../argsclsk" }
boring = "2.0.0"
