[package]
name = "fuzzerk"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#loggerk = { version="0.1.0", path="../loggerk" }
loggerk = { git="https://github.com/hanishkvc/prgs-rustland-libs-loggerk" }
#argsclsk = { version="0.1.0", path="../argsclsk" }
argsclsk = { git="https://github.com/hanishkvc/prgs-rustland-libs-argsclsk" }
#tokensk = { version="0.1.0", path="../tokensk" }
tokensk = { git="https://github.com/hanishkvc/prgs-rustland-libs-tokensk" }
#datautilsk = { version="0.1.0", path="../datautilsk" }
datautilsk = { git="https://github.com/hanishkvc/prgs-rustland-libs-datautilsk" }
boring = "2.0.0"
